# PRAP-PROJECT

./: .gitignore  CMakeBackup.txt  CMakeLists.txt  CMakeTry.txt  README.md  gemini_notes.md  text.txt
backup/: Map.cpp  Map.h
include/: Ally.h  DebugManager.h  Enemy.h  Entity.h  Game.h  Globals.h  HUD.h  MapManager.h  Player.h  ResourceManager.h  ScoreManager.h  Trash.h
src/: Ally.cpp  DebugManager.cpp  Enemy.cpp  Game.cpp  HUD.cpp  MapManager.cpp  Player.cpp  ResourceManager.cpp  main.cpp
